Table boards {
  id uuid7 [primary key]
  user_id varchar [unique, not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`, note: "updated via trigger"]
}

Table rows {
  id uuid7 [primary key]
  board_id uuid7 [not null]
  title varchar [not null]
  order varchar [not null, note: "fractional index string, e.g. 'a0', 'a1', 'b0V'"]
  color varchar
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`, note: "updated via trigger"]

  indexes {
    (id, board_id) [unique]
  }
}

Table columns {
  id uuid7 [primary key]
  board_id uuid7 [not null]
  title varchar [not null]
  order varchar [not null, note: "fractional index string"]
  pinned_to_shortcut boolean [not null, default: false]
  pinned_to_dock boolean [not null, default: false]
  icon varchar [null, note: "iconify hugeicons icon name"]
  icon_in_board_menu boolean [not null, default: false]
  icon_near_column_title boolean [not null, default: false]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`, note: "updated via trigger"]

  indexes {
    (id, board_id) [unique]
  }
}

Table tasks {
  id uuid7 [primary key]
  col_id uuid7 [not null]
  row_id uuid7 [not null]
  board_id uuid7 [not null]

  title varchar [not null]
  description varchar
  checklist json
  order varchar [not null, note: "fractional index string, scoped to (col_id, row_id) cell"]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`, note: "updated via trigger"]
}


Ref: rows.board_id > boards.id [delete: cascade, update: no action]
Ref: columns.board_id > boards.id [delete: cascade, update: no action]
Ref: tasks.board_id > boards.id [delete: cascade, update: no action]

// Without this, nothing prevents a task from having a row_id from board A and a col_id from board B
Ref: tasks.(row_id, board_id) > rows.(id, board_id) [delete: cascade, update: no action]
Ref: tasks.(col_id, board_id) > columns.(id, board_id) [delete: cascade, update: no action]
